# op-succinct

./: .gitignore  .gitmodules  Cargo.toml  justfile  rust-toolchain.toml
.github/actions/setup/: action.yml
.github/workflows/: cost-estimator-manual.yml  elf.yml
book/: SUMMARY.md
book/advanced/: proposer.md  verify-binaries.md
book/quick-start/: upgrade-l2-output-oracle.md
configs/1115511103/: rollup.json
configs/1115511107/: rollup.json
configs/1115511108/: rollup.json
configs/5000/: rollup.json
configs/5003/: rollup.json
configs/5003007/: rollup.json
contracts/: Taskfile.yaml  foundry.toml
contracts/deploy-config/ethereum-mainnet/: default.yaml
contracts/deploy-config/ethereum-mainnet-drill/: default.yaml
contracts/deploy-config/ethereum-sepolia/: default.yaml
contracts/deploy-config/ethereum-sepolia-fork/: default.yaml
contracts/deploy-config/ethereum-sepolia-qa1/: default.yaml
contracts/deploy-config/ethereum-sepolia-qa7/: default.yaml
contracts/script/: OPSuccinctDeployer.s.sol  OPSuccinctParameterUpdater.s.sol  OPSuccinctUpgrader.s.sol  OPSuccinctUpgraderDrill.s.sol
contracts/script/validity/: OPSuccinctDeployer.s.sol  OPSuccinctParameterUpdater.s.sol  OPSuccinctUpgrader.s.sol
contracts/src/: OPSuccinctL2OutputOracle.sol
contracts/src/validity/: OPSuccinctL2OutputOracle.sol
contracts/test/helpers/: JSONDecoder.sol  Utils.sol
contracts/test/validity/: OPSuccinctL2OutputOracle.t.sol  Upgrade.t.sol
elf/: aggregation-elf
fault-proof/src/: lib.rs
mantle-test/: test-local-deployment.sh
mantle-test/contracts/: foundry.toml
programs/mantle/: Cargo.toml
programs/mantle/src/: main.rs
proposer/op/: Dockerfile.op_proposer  go.mod  go.sum
proposer/succinct/: Cargo.toml  Dockerfile
scripts/prove/: Cargo.toml
scripts/prove/src/: lib.rs
scripts/utils/: Cargo.toml
utils/client/: Cargo.toml
utils/client/src/: boot.rs  client.rs  driver.rs  lib.rs  mantle_provider.rs  pipes.rs  types.rs
utils/client/src/oracle/: blob_provider.rs  in_memory_oracle.rs  mod.rs
utils/client/src/precompiles/: mod.rs
utils/client/src/witness/: executor.rs  preimage_store.rs
utils/host/: Cargo.toml
utils/proof/: Cargo.toml
validity/: Cargo.toml  Dockerfile  Dockerfile.eigenda
validity/src/: proof_requester.rs  proposer.rs  types.rs
(+26 files in other folders)
