[package]
name = "mantle"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cfg-if.workspace = true
serde_json.workspace = true
log.workspace = true
tracing.workspace = true
anyhow.workspace = true

# workspace (ethereum)
op-alloy-consensus.workspace = true
op-alloy-network.workspace = true
op-alloy-rpc-types.workspace = true
op-alloy-rpc-types-engine.workspace = true
op-alloy-genesis.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
# alloy-sol-types = { workspace = true }

# sp1
sp1-zkvm.workspace = true

# kona
kona-executor.workspace = true

# op-succinct
op-succinct-client-utils.workspace = true

# `tracing-subscriber` feature dependencies
tracing-subscriber = { workspace = true, optional = true }

alloy-primitives = { workspace = true }
serde_cbor.workspace = true

[features]
tracing-subscriber = ["dep:tracing-subscriber"]
