[package]
name = "op-succinct-client-utils"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
# ethereum
op-alloy-consensus.workspace = true
alloy-consensus.workspace = true
alloy-rlp.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
revm.workspace = true

# workspace (op-alloy)
op-alloy-rpc-types-engine.workspace = true
op-alloy-genesis.workspace = true
op-alloy-protocol.workspace = true

# workspace (kona)
kona-preimage.workspace = true
kona-mpt.workspace = true
kona-derive.workspace = true
kona-proof.workspace = true
kona-executor.workspace = true
kona-driver.workspace = true
# kona-rpc.workspace = true
# kona-protocol.workspace = true
# kona-genesis.workspace = true

# general
anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
rkyv.workspace = true
sha2.workspace = true
tracing.workspace = true
itertools.workspace = true
spin.workspace = true

# kzg
kzg-rs.workspace = true
rust-kzg-bn254-verifier.workspace = true
rust-kzg-bn254-primitives.workspace = true
ark-bn254.workspace = true
ark-ff.workspace = true
